[package]
name = "ai-pricing-json-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
name = "ai_pricing_json_types"
path = "src/lib.rs"

